upload book files

--- a/src/main/resources/phoenixCloud.properties
+++ b/src/main/resources/phoenixCloud.properties
@@ -24,3 +24,6 @@ hibernate.generate_statistics=false
 # true : enable showing sql statement
 # false : disable showing sql statement
 hibernate.show_sql=false
+
+# folder is used to store books' files
+book_file_folder=/book
