Bug: fixed many bugs

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,7 @@
 		<listener-class>com.phoenixcloud.listener.Startup</listener-class>
 	</listener>
 	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+		<listener-class>com.phoenixcloud.listener.PhoenixSpringContextLoaderListener</listener-class>
 	</listener>
 	
 	<welcome-file-list>
