Bug: remove a service code and add a new service code (not modify) caused an null pointer exception

--- a/src/main/resources/phoenixCloud.properties
+++ b/src/main/resources/phoenixCloud.properties
@@ -27,3 +27,8 @@ hibernate.show_sql=false
 
 # folder is used to store books' files
 book_file_folder=/book
+
+# folder is used to store book resource files
+res_file_folder=/resource
+
+
