Bug: fixed bugs

--- a/src/main/resources/phoenixCloud.properties
+++ b/src/main/resources/phoenixCloud.properties
@@ -31,4 +31,8 @@ book_file_folder=/book
 # folder is used to store book resource files
 res_file_folder=/resource
 
+#protocol for file transfer
+protocol_file_transfer=http
 
+#port for serving file transfer
+hfs_port=8123
