--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-		<java.home>d:\Program Files\Java\jdk1.6.0_37</java.home>
+		<java.home>c:\Program Files\Java\jdk1.6.0_38</java.home>
 		<!-- <java.home>/usr/lib/jvm/java-6-sun-1.6.0.2</java.home> -->
 		<cxf.version>2.7.6</cxf.version>
 		<openjpa.version>2.2.1</openjpa.version>
@@ -55,6 +55,11 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.apache.ant</groupId>
+		  <artifactId>ant</artifactId>
+		  <version>1.9.0</version>
 		</dependency>
 
 		<!-- JSON -->
