--- a/src/main/resources/phoenixCloud.properties
+++ b/src/main/resources/phoenixCloud.properties
@@ -28,6 +28,9 @@ hibernate.show_sql=false
 # folder is used to store books' files
 book_file_folder=/book
 
+# folder is used to store books' resource files
+book_res_folder=/res
+
 #protocol for file transfer
 protocol_file_transfer=http
 
