--- a/src/main/resources/phoenixCloud.properties
+++ b/src/main/resources/phoenixCloud.properties
@@ -1,16 +1,28 @@
 ## Mysql connection
 
 # mysql database name
-db_name = phoenixCloud
+ctrl_db_name = ctrl_db
 
 # username
-db_username = root
+ctrl_db_username = root
 
 # password for the username above
-db_password = lySin@mANa84
+ctrl_db_password = lySin@mANa84
 
-db_driver = com.mysql.jdbc.Driver
-db_uri = jdbc:mysql:///
+ctrl_db_driver = com.mysql.jdbc.Driver
+ctrl_db_uri = jdbc:mysql:///
+
+# mysql database name
+res_db_name = res_db
+
+# username
+res_db_username = root
+
+# password for the username above
+res_db_password = lySin@mANa84
+
+res_db_driver = com.mysql.jdbc.Driver
+res_db_uri = jdbc:mysql:///
 
 #Validation query string for mySql
 db_validationQuery = select 1
@@ -36,3 +48,16 @@ protocol_file_transfer=http
 
 #port for serving file transfer
 hfs_port=8123
+
+## atomikos configuration
+
+# Set output directory where console file and other files are to be put
+# make sure this directory exists!
+atomikos_output_dir=/tmp/atomikos/
+
+# Set directory of log files; make sure this directory exists!
+atomikos_log_base_dir=/tmp/atomikos/
+
+# Set this to WARN, INFO or DEBUG to control the granularity
+# of output to the console file.
+console_log_level=INFO
