--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,13 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-		<java.home>c:\Program Files\Java\jdk1.6.0_38</java.home>
+		<java.home>D:\Program Files\Java\jdk1.6.0_37</java.home>
 		<!-- <java.home>/usr/lib/jvm/java-6-sun-1.6.0.2</java.home> -->
 		<cxf.version>2.7.6</cxf.version>
 		<openjpa.version>2.2.1</openjpa.version>
 		<org.springframework.version>3.1.0.RELEASE</org.springframework.version>
 		<version.jersey>1.9.1</version.jersey>
+		<atomikos.version>3.8.0</atomikos.version>
 	</properties>
 
 	<repositories>
@@ -38,6 +39,11 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.5.6</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -150,6 +156,32 @@
 			<groupId>cglib</groupId>
 			<artifactId>cglib-nodep</artifactId>
 			<version>2.2</version>
+		</dependency>
+		
+		<!-- atomikos -->
+
+		<dependency>
+			<groupId>com.atomikos</groupId>
+			<artifactId>transactions-jta</artifactId>
+			<version>${atomikos.version}</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>com.atomikos</groupId>
+			<artifactId>transactions-jdbc</artifactId>
+			<version>${atomikos.version}</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>com.atomikos</groupId>
+			<artifactId>transactions-hibernate3</artifactId>
+			<version>${atomikos.version}</version>
+			<exclusions>
+				<exclusion>
+				<artifactId>hibernate</artifactId>
+				<groupId>org.hibernate</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 		<!-- cxf -->
