--- a/src/main/resources/phoenixCloud.properties
+++ b/src/main/resources/phoenixCloud.properties
@@ -61,3 +61,6 @@ atomikos_log_base_dir=/tmp/atomikos/
 # Set this to WARN, INFO or DEBUG to control the granularity
 # of output to the console file.
 console_log_level=INFO
+
+#resource web app name
+res_server_appname=resserver
