fixed many bugs

--- a/src/main/resources/phoenixCloud.properties
+++ b/src/main/resources/phoenixCloud.properties
@@ -37,12 +37,6 @@ hibernate.generate_statistics=false
 # false : disable showing sql statement
 hibernate.show_sql=false
 
-# folder is used to store books' files
-book_file_folder=/book
-
-# folder is used to store books' resource files
-book_res_folder=/res
-
 #protocol for file transfer
 protocol_file_transfer=http
 
@@ -57,7 +51,10 @@ atomikos_log_base_dir=/tmp/atomikos/
 
 # Set this to WARN, INFO or DEBUG to control the granularity
 # of output to the console file.
-console_log_level=INFO
+console_log_level=WARN
+
+# max active transactions
+max_actives = 100
 
 #resource web app name
 res_server_appname=resserver
