add a feature: change book cover picture

--- a/src/main/resources/phoenixCloud.properties
+++ b/src/main/resources/phoenixCloud.properties
@@ -51,10 +51,9 @@ atomikos_log_base_dir=/tmp/atomikos/
 
 # Set this to WARN, INFO or DEBUG to control the granularity
 # of output to the console file.
-console_log_level=WARN
+atomikos_console_log_level=WARN
 
-# max active transactions
-max_actives = 100
+atomikos_serial_jta_transactions=false
 
 #resource web app name
 res_server_appname=resserver
