--- a/pom.xml
+++ b/pom.xml
@@ -111,11 +111,6 @@
 			<version>2.4</version>
 		</dependency>
 		<dependency>
-			<groupId>commons-httpclient</groupId>
-			<artifactId>commons-httpclient</artifactId>
-			<version>3.0.1</version>
-		</dependency>
-		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.4</version>
@@ -135,6 +130,18 @@
 			<artifactId>ant</artifactId>
 			<version>1.9.1</version>
 		</dependency>
+		
+		<!-- HttpClient -->
+		<dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+		<dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.0.1</version>
+        </dependency>
 		
 		<!-- hibernate / sql -->
 		<dependency>
