--- a/src/main/resources/phoenixCloud.properties
+++ b/src/main/resources/phoenixCloud.properties
@@ -7,7 +7,7 @@ ctrl_db_name = ctrl_db
 ctrl_db_username = root
 
 # password for the username above
-ctrl_db_password = root
+ctrl_db_password = 1234
 
 ctrl_db_driver = com.mysql.jdbc.Driver
 ctrl_db_uri = jdbc:mysql:///
@@ -19,7 +19,7 @@ res_db_name = res_db
 res_db_username = root
 
 # password for the username above
-res_db_password = root
+res_db_password = 1234
 
 res_db_driver = com.mysql.jdbc.Driver
 res_db_uri = jdbc:mysql:///
@@ -59,3 +59,5 @@ atomikos_serial_jta_transactions=false
 res_server_appname=resserver
 
 book_suffix_name=eth
+
+preview_suffix_name=swf
